# cognous-agent-governance-evidence-pack

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: tests.yml
docs/: concepts.md  evidence_pack_format.md  examples.md  integration_with_agent_control_plane.md  rendering.md  roadmap.md  validation.md
examples/: customer_service_agent_evidence_pack.json  finance_workflow_agent_evidence_pack.json  internal_research_agent_evidence_pack.json  procurement_agent_evidence_pack.json
examples/rendered/: customer_service_agent_evidence_pack.md  finance_workflow_agent_evidence_pack.md  internal_research_agent_evidence_pack.md  procurement_agent_evidence_pack.md
schemas/: action_inventory_item.schema.json  agent_overview.schema.json  authority_model_summary.schema.json  blocked_action_summary.schema.json  deployment_context.schema.json  evidence_pack.schema.json  policy_control_summary.schema.json  redaction_export_summary.schema.json  reliance_summary.schema.json  replay_bundle_inventory_item.schema.json  review_record.schema.json  risk_register_item.schema.json  tool_inventory_item.schema.json  validation_issue.schema.json  validation_report.schema.json  validation_summary.schema.json
src/agent_governance_evidence_pack.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
templates/: audit_review_template.md  evidence_pack_template.md  executive_summary_template.md
tests/: test_cli.py  test_examples.py  test_loader.py  test_models.py  test_renderer.py  test_summary.py  test_validator.py
(+7 files in other folders)
